--- a/BTL/Views/Shared/_Layout.cshtml
+++ b/BTL/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                     <li>@Html.ActionLink("Khoa", "Index", "Khoas")</li>
                     <li>@Html.ActionLink("Lop", "Index", "Lops")</li>
                     <li>@Html.ActionLink("SinhVien", "Index", "SinhViens")</li>
+                    <li>@Html.ActionLink("HocPhan", "Index", "HocPhans")</li>
+                    <li>@Html.ActionLink("Đăng xuất", "Logoff", "Account")</li>
                 </ul>
             </div>
         </div>
